# MyTinyRenderer

./: .gitignore  CMakeLists.txt  MyTinyRenderer.sln  README.md  Renderer.props  TinyRenderer.sln
MyTinyRenderer/: MyTinyRenderer.vcxproj  MyTinyRenderer.vcxproj.filters  SandBox.cpp
MyTinyRenderer/src/Core/: Rasterizer.cpp  Rasterizer.h  Shader.h
MyTinyRenderer/src/Core/Shader/: GouraudShader.h  IShader.cpp  IShader.h
MyTinyRenderer/src/Platform/: Utils.h
MyTinyRenderer/src/Resource/: model.cpp  model.h  tgaimage.h
TinyRenderer/: TinyRenderer.cpp  TinyRenderer.vcxproj  TinyRenderer.vcxproj.filters
src/: SandBox.cpp  main.cpp
src/Core/: CMakeLists.txt  Camera.cpp  Camera.h  Rasterizer.cpp  Rasterizer.h  Scene.cpp  Scene.h  Triangle_Clip.cpp  Triangle_Clip.h
src/Platform/: Buffer.h  CMakeLists.txt  WinApp.cpp  WinApp.h
src/Shader/: BlingPhongShader.h  CMakeLists.txt  DepthShader.h  GouraudShader.h  IShader.cpp  IShader.h  PBRShader.h  Shaders.h  SkyBoxShader.h
src/Utils/: CMakeLists.txt  Config.h  model.cpp  model.h  tgaimage.cpp  tgaimage.h
